<resources>
    <string name="app_name">ChefsBoutique</string>

    <string name="action_favorite">like</string>
    <string name="sign_up">Sign up</string>
    <string name="description">boutique</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered">Cancel</string>
    <string name="register">Create account</string>
    <string name="email">Email</string>
    <string name="chefsBoutique">Chefs</string>
    <string name="action_search">Search</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_ingredients">Search by ingredients</string>
    <string name="search">Search</string>
    <string name="recipe_name">Recipe name</string>
    <string name="exclude_ingredients">Exclude ingredients</string>
    <string name="desired_ingredients">Desired ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_description">Description</string>
    <string name="recipe_image">Recipe image</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose photo from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
