<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="36dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_create_recipe"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            app:layout_constraintCircleRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_add_a_photo"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_recipe_name"
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_create_recipe" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_recipe_name" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/create_recipe_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_recipe_ingredients" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_recipe_category"
            android:hint="@string/recipe_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="true"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_recipe_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        app:hideOnScroll="true"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="16dp"
        app:fabAlignmentMode="end"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_back_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>